# vehicle

./: CMakeLists.txt
app/: manifest.json  package-lock.json  package.json  pages.json
app/common/: mqttService.js
app/components/: device.vue  player.vue  sensor.vue  threshold.vue  weather.vue
app/pages/index/: index.vue
app/pages/setting/: setting.vue
app/pages/test/: test.vue
app/uniCloud-aliyun/cloudfunctions/updateSensors/: index.js  package-lock.json  package.json
app/uniCloud-aliyun/database/: JQL查询.jql  devices.schema.json  sensor_history.schema.json
app/uni_modules/uni-config-center/uniCloud/cloudfunctions/common/uni-config-center/: package-lock.json  package.json
app/uni_modules/uni-id-common/uniCloud/cloudfunctions/common/uni-id-common/: package-lock.json  package.json
c/etc/: zlog.conf
c/include/: cmd_fac.h  device_fac.h  face_detection.h  find_link.h  mqtt_conf.h  public_data.h  thread.h
c/include/common/: __init__.c  cmd_fac.h  device_fac.h  public_data.h
c/include/find_link/: find_link.c
c/include/mqtt/: mqtt_conf.c  mqtt_conf.h
c/src/: fire_ctl.c  main.c
c/src/commands/: gas_ctl.c  hot_ctl.c  human_ctl.c
c/src/common/: __init__.c  find_link.c  mqtt_conf.c  thread.c
c/src/devices/: beeper.c  dht11.c  infrared.c  led.c  mq135.c  mqtt_conf.c  pressure.c  sg90.c
c/src/face_detection/: face_detection.c
c/src/fire_ctl/: fire_ctl.c
c/src/py_c_utils/: CMakeLists.txt  c_utilsmoudle.c
etc/: mqtt_conf.ini
python/: detect.py  utils.py
scripts/: run.sh
tests/: c_utilsmoudle.c  detect.py  face_detection  face_detection.c  test  utils.py
