

# /*****************************************已废弃_2025.06.03 00:25*************************************************************/



# cmake_minimum_required(VERSION 3.10)
# project(py_c_utils)

# # 添加头文件
# include_directories(${INCLUDE_DIR})

# # 设置库文件存储的位置
# set(LIBRARY_OUTPUT_PATH ${LIB_DIR})

# # 制作动态库文件
# add_library(c_utils SHARED c_utilsmoudle.c)


